[tool.poetry]
name = "lfs-presence"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pypresence = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
