[tool.poetry]
name = "lfs-presence"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pypresence = "^4.2.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
requests-file = "^1.5.1"
python-dotenv = "^0.19.0"
questionary = "^1.10.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
